# HX-K12-editor

./: PROTOCOL.md  README.md  pyproject.toml  run.sh
hx_k12_editor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hxk12/: __init__.py  cli.py  config.py  device.py  keycodes.py  layout.py  protocol.py
hxk12/gui/: __init__.py  action_dialog.py  app.py  icons.py  key_button.py  keymap.py  knob_widget.py  main_window.py  theme.py
tests/: test_basic.py
udev/: 99-hx-k12.rules
